--- a/package.json
+++ b/package.json
@@ -25,6 +25,8 @@
     "@angular/ssr": "^17.1.3",
     "class-transformer": "^0.5.1",
     "express": "^4.18.2",
+    "ngx-infinite-scroll": "^17.0.1",
+    "ngx-pagination": "^6.0.3",
     "rxjs": "~7.8.0",
     "tslib": "^2.3.0",
     "zone.js": "~0.14.3"
