--- a/angular.json
+++ b/angular.json
@@ -4,6 +4,12 @@
   "newProjectRoot": "projects",
   "projects": {
     "MovieAppAngular": {
+      "i18n": {
+        "sourceLocale": "en-US",
+        "locales": {
+          "es-EC": "src/locale/messages.es.xlf"
+        }
+      },
       "projectType": "application",
       "schematics": {
         "@schematics/angular:component": {
@@ -24,6 +30,7 @@
         "build": {
           "builder": "@angular-devkit/build-angular:application",
           "options": {
+            "localize": ["es-EC"],
             "outputPath": "dist/movie-app-angular",
             "index": "src/index.html",
             "browser": "src/main.ts",
@@ -52,7 +59,7 @@
                 {
                   "type": "initial",
                   "maximumWarning": "500kb",
-                  "maximumError": "1mb"
+                  "maximumError": "2mb"
                 },
                 {
                   "type": "anyComponentStyle",
