--- a/.github/workflows/main_movie-app-angular-en.yml
+++ b/.github/workflows/main_movie-app-angular-en.yml
@@ -21,14 +21,20 @@ jobs:
         with:
           node-version: '20.x'
 
-      - name: npm install, build, and test
+      - name: Install Angular CLI
+        run: npm install -g @angular/cli
+
+      - name: npm install, build, and test (english)
         run: |
           npm install
-          npm run build --if-present
-          npm run test --if-present
+          ng build --configuration=production-en
+
+      - name: postbuild (prepare browser and server folders)
+        run: |
+          npm run postbuild
 
       - name: Zip artifact for deployment
-        run: zip release.zip ./* -r
+        run: zip release.zip dist/en -r
 
       - name: Upload artifact for deployment job
         uses: actions/upload-artifact@v4
@@ -53,7 +59,7 @@ jobs:
 
       - name: Unzip artifact for deployment
         run: unzip release.zip
-      
+
       - name: Login to Azure
         uses: azure/login@v2
         with:
@@ -68,4 +74,3 @@ jobs:
           app-name: 'movie-app-angular-en'
           slot-name: 'Production'
           package: .
-          
